# RegViz

./: .gitignore  Cargo.toml  README.md
.github/workflows/: clippy.yml  deploy-pages.yml  deploy-web.yml  rust.yml
crates/regviz_app/: Cargo.toml  Trunk.toml  index.html  main.rs
crates/regviz_app/src/: graph.rs  lib.rs  main.rs
crates/regviz_app/src/app/: constants.rs  message.rs  mod.rs  parser.rs  simulation.rs  state.rs  update.rs  view.rs
crates/regviz_app/src/app/message/: input.rs  mod.rs  pane_grid.rs  simulation.rs  view_controls.rs
crates/regviz_app/src/app/theme/: button.rs  colors.rs  container.rs  mod.rs  pane_grid.rs  scrollable.rs  slider.rs  text.rs  text_input.rs
crates/regviz_app/src/app/view/: controls.rs  input.rs  mod.rs  mode_toggle.rs  simulation.rs  visualization.rs
crates/regviz_app/src/graph/: ast.rs  bbox.rs  canvas.rs  dfa.rs  draw.rs  edge.rs  highlight.rs  layout.rs  mod.rs  nfa.rs  node.rs  style.rs
crates/regviz_app/src/graph/layout/: dfa.rs  mod.rs  nfa.rs  tree.rs
crates/regviz_core/: Cargo.toml
crates/regviz_core/src/: errors.rs  lib.rs  main.rs
crates/regviz_core/src/core/: ast.rs  automaton.rs  dfa.rs  lexer.rs  min.rs  mod.rs  nfa.rs  parser.rs  sim.rs  tokens.rs
crates/regviz_core/src/examples/: presets.rs
crates/regviz_core/src/viz/: layout.rs
crates/regviz_core/tests/: core_parsing.rs  dfa_tests.rs  lexer_tests.rs  minimization_tests.rs  nfa_tests.rs  parser_tests.rs  simulation_tests.rs
papers/project_proposal/: 00_project_proposal.tex  usf.cls
papers/regviz_proposal/: main.tex
papers/regviz_report/: main.typ  styles.typ
papers/regviz_report/report_long/: main.typ
papers/regviz_report/report_long/sections/: abstract.typ  build_deploy.typ  core.typ
papers/regviz_report/report_short/: main.typ  styles.typ
papers/regviz_report/sections/: abstract.typ  background.typ  build_deploy.typ  conclusion.typ  core.typ  frontend.typ  future.typ  introduction.typ  usage.typ
src/: errors.rs  lib.rs  main.rs
src/app/: canvas.rs  mod.rs  update.rs  view.rs
src/automata/: dfa.rs  mod.rs
src/core/: ast.rs  dfa.rs  lexer.rs  min.rs  mod.rs  nfa.rs  parser.rs  sim.rs  tokens.rs
src/examples/: mod.rs
tests/: core_parsing.rs  dfa_tests.rs  lexer_tests.rs  minimization_tests.rs  nfa_tests.rs  parser_tests.rs  simulation_tests.rs
tests/project_proposal/: AT ProjectF25.docx
web/: Trunk.toml  index.html
