[package]
name = "regviz_app"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing = "0.1"
iced = { git = "https://github.com/iced-rs/iced", features = [
    "tokio",
    "canvas",
    "advanced",
] }
iced_graphics = { git = "https://github.com/iced-rs/iced", features = [
    "geometry",
] }
regviz_core = { path = "../regviz_core" }

[[bin]]
name = "regviz_app"
path = "src/main.rs"
